Stretch done: Fixed navbar w/ opacity

--- a/css/index.css
+++ b/css/index.css
@@ -165,6 +165,11 @@ p {
   flex-direction: column;
   align-items: center;
   background-color: #F6F6F6;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: auto;
+  opacity: 0.9;
   padding: 0.8rem 0;
   border-bottom: 1px solid #F1F1F1;
 }
@@ -174,7 +179,7 @@ p {
   margin-top: 1rem;
 }
 .navigation nav a {
-  padding: 0 1.2rem;
+  padding: 0 1.3rem;
   text-decoration: none;
   font-size: 1.5rem;
   color: #454A59;
@@ -185,6 +190,7 @@ p {
 @media (max-width: 500px) {
   .navigation nav {
     margin-top: 1.5rem;
+    justify-content: center;
   }
 }
 footer {
@@ -196,6 +202,9 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.home {
+  margin-top: 8rem;
 }
 .home .intro img {
   width: 100%;
