--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,8 @@
 // Home Content
 
 .home {
+  margin-top: 8rem;
+
   .intro {
     img {
       width: 100%;
