--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,7 +3,13 @@
     flex-direction: column;
     align-items: center;
     background-color: @nav-bg;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: auto;
 
+    opacity: 0.9;
+    
     padding: 0.8rem 0;
 
     nav {
@@ -12,7 +18,7 @@
         margin-top: 1rem;
 
         a {
-            padding: 0 1.2rem;
+            padding: 0 1.3rem;
             text-decoration: none;
             font-size: 1.5rem;
             color: @nav-font;
@@ -24,6 +30,7 @@
 
         @media @mobile {
             margin-top: 1.5rem;
+            justify-content: center;
         }
     }
 
